godoc update and logout update
